--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.1.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-type-animation": "^3.2.0",
     "socket.io-client": "^4.8.1"
   },
