--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.3.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
+    "pdf-parse": "^1.1.1",
     "razorpay": "^2.9.2",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
