--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "react-router-dom": "^6.22.3",
     "react-scroll-to-bottom": "^4.2.0",
     "react-type-animation": "^3.2.0",
-    "simple-peer": "^9.11.1",
-    "socket.io-client": "^4.8.1",
-    "vite-compatible-simple-peer": "^9.11.0"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
