--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^8.2.2",
     "rc-table": "^7.50.3",
     "react": "^18.2.0",
+    "react-audio-transcriber-hook": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
