--- a/server/package.json
+++ b/server/package.json
@@ -21,12 +21,17 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "razorpay": "^2.9.2",
     "redis": "^4.7.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "xss": "^1.0.15"
   }
 }
